--- a/HTML web-page.html
+++ b/HTML web-page.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="fourthbox">
 			<button><strong><a href="Movies.html">Movies</a></strong></button>
-			<button><strong><a class="movie" href="https://Ibrokhimjon23.github.io/Index.html" target="_blank">Here you can check Problem </a></strong></button>
+			<button><strong><a class="movie" href="https://abdulaziz221199.github.io/HTML web-page.html">Here you can check Problem </a></strong></button>
 		</div>
 	</div>
 </body>
